--- a/src/assets/styles/scss/components/_navbar.scss
+++ b/src/assets/styles/scss/components/_navbar.scss
@@ -1,5 +1,128 @@
 .navbar {
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: end;
+  justify-content: space-between;
+  padding: 10px 0;
+
+  .container-logo {
+    width: 20%;
+    cursor: pointer;
+    margin: 0 50px;
+
+    @media screen and (max-width: 768px) {
+      margin: 0 20px;
+    }
+  }
+
+  .nav {
+    flex-grow: 1;
+    margin-right: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    width: 100%;
+    transition: all .5s ease-in-out;
+
+    @media screen and (max-width: 768px) {
+      overflow: hidden;
+      height: 100vh;
+      transition: all 0.5s ease;
+      display: flex;
+      flex-flow: column nowrap;
+      align-items: center;
+      justify-content: center;
+      pointer-events: none;
+      position: absolute;
+      top: 0;
+      right: -50%;
+      width: 0;
+      line-height: 50px;
+      background-color: rgb(230, 228, 228);
+
+      &.active {
+        width: 50%;
+        pointer-events: auto;
+        z-index: 100;
+        font-size: 1.5em;
+        margin-right: 0;
+        right: 0;
+
+        @media screen and (max-width: 480px) {
+          width: 100vw !important;
+          height: 50vh;
+        }
+      }
+
+      @media screen and (max-width: 480px) {
+        height: 0;
+        width: 100vw !important;
+        right: 0;
+        left: 0;
+        top: 90px;
+      }
+    }
+
+    &__user {
+      font-size: 1.2em;
+      width: 3%;
+
+      svg {
+        cursor: pointer;
+      }
+
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        margin: 20px 0;
+        font-size: .8em;
+      }
+    }
+
+    &__cart {
+      font-size: 1.6em;
+      width: 3%;
+
+      svg {
+        cursor: pointer;
+      }
+
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        font-size: 1.1em;
+      }
+    }
+  }
+
+  .menu-close {
+    width: 50px;
+    height: 50px;
+    display: none;
+    font-size: 2em;
+    margin: 15px 30px;
+    cursor: pointer;
+    position: relative;
+    z-index: 200;
+    color: white !important;
+
+    @media screen and (max-width: 768px) {
+      display: block;
+    }
+  }
+
+  .menu-responsive {
+    width: 50px;
+    height: 50px;
+    display: none;
+    font-size: 2em;
+    margin: 15px 30px;
+    cursor: pointer;
+    position: relative;
+    z-index: 200;
+
+    @media screen and (max-width: 768px) {
+      display: block;
+    }
+
+    @media screen and (max-width: 768px) {
+      display: block;
+    }
+  }
 }
