--- a/src/assets/styles/scss/components/header/_link.scss
+++ b/src/assets/styles/scss/components/header/_link.scss
@@ -1,4 +1,4 @@
-@use '../abstracts/variables' as var;
+@use '../../abstracts/variables' as var;
 
 .container-link {
   margin: 0 20px;
@@ -7,6 +7,7 @@
   display: flex;
   width: 10%;
   height: 100%;
+  min-width: 100px;
 
   .item-link {
     border: none;
@@ -21,7 +22,6 @@
     text-decoration: none;
     justify-content: center;
     align-items: center;
-    min-width: 150px;
   }
 
   &:hover {
