--- a/src/assets/styles/scss/components/header/_navbar.scss
+++ b/src/assets/styles/scss/components/header/_navbar.scss
@@ -1,7 +1,11 @@
+@use './link';
+@use './dropdown';
+
 .navbar {
   display: flex;
   justify-content: space-between;
   padding: 10px 0;
+  margin-bottom: 0;
 
   .container-logo {
     width: 20%;
@@ -64,6 +68,7 @@
     &__user {
       font-size: 1.2em;
       width: 3%;
+      min-width: 50px;
 
       svg {
         cursor: pointer;
@@ -79,6 +84,7 @@
     &__cart {
       font-size: 1.6em;
       width: 3%;
+      min-width: 50px;
 
       svg {
         cursor: pointer;
