--- a/src/assets/styles/scss/abstracts/_variables.scss
+++ b/src/assets/styles/scss/abstracts/_variables.scss
@@ -2,4 +2,7 @@ $weight-header : 700;
 $font-size-header: 0.9em;
 $font-color-header : rgba(36, 36, 36, 0.821);
 
+$bg-color-footer: #F7F7F7;
+$font-color-footer: #aaaeb3;
+
 $bianchi-color : #00B7B1;
