--- a/src/assets/styles/scss/components/footer/_footer.scss
+++ b/src/assets/styles/scss/components/footer/_footer.scss
@@ -2,6 +2,135 @@
 
 .footer {
   margin-top: 100px;
+  background-color: var.$bg-color-footer;
+  padding: 50px 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 
-  
+  &__contact {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: start;
+    color: var.$font-color-footer;
+    font-weight: 300;
+    font-size: 1.2em;
+
+    &--title {
+      font-weight: 500;
+      letter-spacing: 2px;
+      margin-bottom: 28px;
+    }
+
+    &--data-phone {
+      font-size: 1.6em;
+      letter-spacing: 1px;
+      margin-bottom: 12px;
+      display: flex;
+
+      svg {
+        margin-right: 15px;
+        margin-top: 2px;
+        color: rgb(83, 187, 228);
+      }
+    }
+
+    &--data-email {
+      font-size: 1.5em;
+      letter-spacing: 1px;
+      margin-bottom: 50px;
+      display: flex;
+
+      svg {
+        margin-right: 15px;
+        margin-top: 4px;
+        color: rgb(83, 187, 228);
+      }
+    }
+
+    &--payment-title {
+      font-weight: 500;
+      letter-spacing: 2px;
+    }
+
+    &--opinions-title {
+      font-weight: 500;
+      letter-spacing: 2px;
+      margin-bottom: 28px;
+    }
+  }
+
+  &__utils {
+    font-size: 1.1em;
+    margin: 0 auto;
+    color: rgba(128, 128, 128, 0.616);
+
+    .section {
+      margin-bottom: 40px;
+    }
+
+    &--title {
+      color: black;
+      font-weight: 600;
+      font-size: 1.2em;
+      margin: 0 0 20px 0;
+    }
+
+    &--link {
+      margin-bottom: 15px;
+      cursor: pointer;
+    }
+  }
+
+  &__shipments {
+    font-size: 1.1em;
+    margin: 0 auto;
+    color: rgba(128, 128, 128, 0.616);
+
+    &--title {
+      color: black;
+      font-weight: 600;
+      font-size: 1.2em;
+    }
+
+    &--link {
+      margin-bottom: 15px;
+      cursor: pointer;
+    }
+  }
+
+  &__privacy {
+    padding: 40px 40px;
+    background-color: var.$bg-color-footer;
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid rgba(196, 193, 193, 0.671);
+
+    &--title {
+      width: 100%;
+      text-align: left;
+      font-size: .95em;
+      letter-spacing: 2px;
+    }
+
+    &--terms {
+      color: var.$font-color-footer;
+      width: 100%;
+      display: flex;
+      font-size: .95em;
+      justify-content: end;
+
+      p {
+        margin: 0 20px;
+        font-size: 1.2em;
+      }
+    }
+  }
+
+  &__cards {
+    margin-bottom: 50px;
+  }
+
+  &__companys {
+    margin-bottom: 50px;
+  }
 }
