--- a/src/assets/styles/scss/components/home/_section.scss
+++ b/src/assets/styles/scss/components/home/_section.scss
@@ -8,10 +8,10 @@
   margin: 0 auto;
 
   &__section {
-    min-width: 300px;
+    min-width: 260px;
     padding: 20px 50px;
     width: 40%;
-    height: 320px;
+    height: 260px;
     display: flex;
     flex-flow: column wrap;
     align-items: center;
@@ -24,6 +24,10 @@
     &--image {
       font-size: 6em;
       margin-bottom: 50px;
+
+      @media screen and (max-width: 1700px) {
+        font-size: 4.5em;
+      }
 
       @media screen and (max-width: 600px) {
         font-size: 5.5em;
@@ -39,6 +43,10 @@
       text-transform: capitalize;
       font-weight: 500;
 
+      @media screen and (max-width: 1700px) {
+        font-size: 1.9em;
+      }
+
       @media screen and (max-width: 600px) {
         font-size: 1.6em;
       }
@@ -50,6 +58,11 @@
 
     &:hover {
       background-color: var.$bianchi-color;
+    }
+
+    @media screen and (max-width: 1700px) {
+      min-width: 150px;
+      height: 180px;
     }
 
     @media screen and (max-width: 600px) {
@@ -69,11 +82,10 @@
     }
   }
 
-  @media screen and (max-width: 2100px) {
+  @media screen and (max-width: 1120px) {
     grid-template-columns: repeat(2, 1fr);
   }
-
-  @media screen and (max-width: 950px) {
+  @media screen and (max-width: 640px) {
     grid-template-columns: repeat(1, 1fr);
   }
 }
