--- a/src/assets/styles/scss/components/header/_link.scss
+++ b/src/assets/styles/scss/components/header/_link.scss
@@ -22,6 +22,7 @@
     text-decoration: none;
     justify-content: center;
     align-items: center;
+    transition: all .4s ease-in-out;
   }
 
   &:hover {
