--- a/src/assets/styles/scss/components/home/_section.scss
+++ b/src/assets/styles/scss/components/home/_section.scss
@@ -20,6 +20,7 @@
     background-color: #F9F9F9;
     border-radius: 40px;
     cursor: pointer;
+    transition: all .4s ease-in-out;
 
     &--image {
       font-size: 6em;
