init layout router

--- a/src/assets/styles/scss/abstracts/_variables.scss
+++ b/src/assets/styles/scss/abstracts/_variables.scss
@@ -6,3 +6,6 @@ $bg-color-footer: #F7F7F7;
 $font-color-footer: #aaaeb3;
 
 $bianchi-color : #00B7B1;
+
+$section-padding: 50px;
+$section-category: 50%;
