--- a/src/assets/styles/scss/index.scss
+++ b/src/assets/styles/scss/index.scss
@@ -2,6 +2,7 @@
 
 @use './components/header/navbar';
 @use './components/home/home';
+@use './components/category/road';
 @use './components/footer/footer';
 
 @use './abstracts/variables';
