--- a/src/assets/styles/scss/components/category/_product.scss
+++ b/src/assets/styles/scss/components/category/_product.scss
@@ -11,6 +11,23 @@
     font-weight: 800;
     font-size: 1.2em;
 
+    .items {
+      text-transform: uppercase;
+      margin-bottom: -21px;
+      position: relative;
+      right: -35%;
+      top: 5%;
+      z-index: 100;
+      color: white;
+      font-size: .9em;
+
+      span {
+        border-radius: 50%;
+        padding: .3rem .6rem;
+        background-color: red;
+      }
+    }
+
     &--image {
       width: 17vw;
       margin-bottom: 10px;
@@ -285,7 +302,7 @@
     padding: .3rem .4rem;
     margin-bottom: -30px;
     position: relative;
-    top: 0;
+    top: 5%;
     z-index: 100;
     color: white;
     font-size: .9em;
