improve responsive until Galaxy Fold

--- a/src/assets/styles/scss/components/home/_image.scss
+++ b/src/assets/styles/scss/components/home/_image.scss
@@ -64,8 +64,14 @@
   @media screen and (max-width: 600px) {
     min-height: 400px;
   }
+  @media screen and (max-width: 550px) {
+    min-height: 380px;
+  }
   @media screen and (max-width: 500px) {
     min-height: 350px;
+  }
+  @media screen and (max-width: 450px) {
+    min-height: 300px;
   }
   @media screen and (max-width: 400px) {
     min-height: 250px;
