--- a/src/assets/styles/scss/components/footer/_footer.scss
+++ b/src/assets/styles/scss/components/footer/_footer.scss
@@ -77,6 +77,10 @@
     @media screen and (max-width: 620px) {
       text-align: center;
     }
+
+    @media screen and (max-width: 450px) {
+      font-size: .6em;
+    }
   }
 
   &__utils {
@@ -110,6 +114,11 @@
 
     @media screen and (max-width: 620px) {
       text-align: center;
+    }
+
+
+    @media screen and (max-width: 450px) {
+      font-size: .7em;
     }
   }
 
@@ -146,6 +155,11 @@
     @media screen and (max-width: 620px) {
       grid-column: 1/2;
       text-align: center;
+    }
+
+
+    @media screen and (max-width: 450px) {
+      font-size: .7em;
     }
   }
 
@@ -205,6 +219,11 @@
 
     @media screen and (max-width: 1100px) {
       flex-direction: column-reverse;
+    }
+
+    
+    @media screen and (max-width: 450px) {
+      font-size: .6em;
     }
   }
 
