--- a/src/assets/styles/scss/components/home/_section.scss
+++ b/src/assets/styles/scss/components/home/_section.scss
@@ -35,11 +35,14 @@
       }
 
       @media screen and (max-width: 600px) {
-        font-size: 5.5em;
+        font-size: 3.5em;
       }
 
-      @media screen and (max-width: 400px) {
-        font-size: 5em;
+      @media screen and (max-width: 470px) {
+        font-size: 2em;
+      }
+      @media screen and (max-width: 330px) {
+        font-size: 1.5em;
       }
     }
 
@@ -53,11 +56,15 @@
       }
 
       @media screen and (max-width: 600px) {
-        font-size: 1.6em;
+        font-size: 1.4em;
       }
 
-      @media screen and (max-width: 400px) {
-        font-size: 1.3em;
+      @media screen and (max-width: 470px) {
+        font-size: 1.2em;
+      }
+
+      @media screen and (max-width: 330px) {
+        font-size: 1em;
       }
     }
 
@@ -71,27 +78,24 @@
     }
 
     @media screen and (max-width: 600px) {
-      min-width: 200px;
-      height: 220px;
-      margin: 20px auto;
+      min-width: 120px;
+      height: 140px;
+      margin: 10px auto;
     }
 
-    @media screen and (max-width: 380px) {
-      min-width: 160px;
-      height: 180px;
+    @media screen and (max-width: 470px) {
+      min-width: 80px;
+      height: 110px;
     }
 
-    @media screen and (max-width: 280px) {
-      min-width: 140px;
-      height: 180px;
+    @media screen and (max-width: 330px) {
+      max-width: 40px;
+      padding: 15px 15px;
+      height: 100px;
     }
   }
 
   @media screen and (max-width: 1120px) {
     grid-template-columns: repeat(2, 1fr);
-  }
-
-  @media screen and (max-width: 640px) {
-    grid-template-columns: repeat(1, 1fr);
   }
 }
