--- a/src/assets/styles/scss/components/home/_image.scss
+++ b/src/assets/styles/scss/components/home/_image.scss
@@ -1,18 +1,71 @@
 @use '../../abstracts/variables' as var;
 
-.cover {
-  background-image: url('../../../../images/cover.jpg');
-  background-repeat: no-repeat, no-repeat;
-  background-size: cover;
-  min-width: 100vw;
-  min-height: 1000px;
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: center;
-  margin-bottom: 100px;
+.carousel {
+  width: 100%;
+  overflow: hidden;
+
+  &__nav {
+    z-index: 1000;
+    width: 100%;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    position: absolute;
+    top: 45%;
+
+    svg {
+      opacity: .6;
+      cursor: pointer;
+      margin: 3em;
+      font-size: 3em;
+      transition: all .3s ease-in-out;
+
+      &:hover {
+        opacity: 1;
+        transform: scale(1.2);
+      }
+    }
+  }
+
+  &__images {
+    width: 500vw;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    transition: all .5s ease-in-out;
+
+
+    &--image {
+      width: 20%;
+      min-height: 1200px;
+      max-height: 80vh;
+    }
+  }
+
+  &__points {
+    width: 100vw;
+    margin: 1em 0 0;
+    padding: .4em;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+
+    &--point {
+      width: 2em;
+      height: 2em;
+      margin: 1em 1em 0;
+      cursor: pointer;
+
+      &.activo {
+        background-color: var.$bianchi-color;
+      }
+    }
+  }
 
   &__text {
-
 
     &--title {
 
@@ -26,6 +79,26 @@
     }
   }
 
+  &::before,
+  &::after {
+    content: "";
+    height: 100px;
+    position: absolute;
+    width: 200px;
+    z-index: 2;
+  }
+
+  &::after {
+    right: 0;
+    top: 0;
+    transform: rotateZ(180deg);
+  }
+
+  &::before {
+    left: 0;
+    top: 0;
+  }
+
   @media screen and (max-width: 1700px) and (min-width: 250px) {
     background-size: contain;
     margin-bottom: 0;
@@ -34,51 +107,67 @@
   @media screen and (max-width: 1600px) {
     min-height: 900px;
   }
+
   @media screen and (max-width: 1500px) {
     min-height: 850px;
   }
+
   @media screen and (max-width: 1400px) {
     min-height: 800px;
   }
+
   @media screen and (max-width: 1300px) {
     min-height: 750px;
   }
+
   @media screen and (max-width: 1200px) {
     min-height: 700px;
   }
+
   @media screen and (max-width: 1100px) {
     min-height: 650px;
   }
+
   @media screen and (max-width: 1000px) {
     min-height: 600px;
   }
+
   @media screen and (max-width: 900px) {
     min-height: 550px;
   }
+
   @media screen and (max-width: 800px) {
     min-height: 500px;
   }
+
   @media screen and (max-width: 700px) {
     min-height: 450px;
   }
+
   @media screen and (max-width: 600px) {
     min-height: 400px;
   }
+
   @media screen and (max-width: 550px) {
     min-height: 380px;
   }
+
   @media screen and (max-width: 500px) {
     min-height: 350px;
   }
+
   @media screen and (max-width: 450px) {
     min-height: 300px;
   }
+
   @media screen and (max-width: 400px) {
     min-height: 250px;
   }
+
   @media screen and (max-width: 300px) {
     min-height: 200px;
   }
+
   @media screen and (max-width: 200px) {
     min-height: 150px;
   }
