--- a/src/assets/styles/scss/components/home/_image.scss
+++ b/src/assets/styles/scss/components/home/_image.scss
@@ -34,7 +34,7 @@
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    transition: all .5s ease-in-out;
+    transition: all 1s ease-in-out;
 
 
     &--image {
