--- a/src/assets/styles/scss/components/home/_image.scss
+++ b/src/assets/styles/scss/components/home/_image.scss
@@ -3,6 +3,7 @@
 .carousel {
   width: 100%;
   overflow: hidden;
+  background-color: black;
 
   &__nav {
     z-index: 1000;
@@ -12,7 +13,7 @@
     justify-content: space-between;
     margin: 0 auto;
     position: absolute;
-    top: 500px;
+    top: 40%;
 
     svg {
       opacity: .6;
@@ -35,13 +36,6 @@
     justify-content: space-between;
     align-items: center;
     transition: all 1s ease-in-out;
-
-
-    &--image {
-      width: 20%;
-      min-height: 1200px;
-      max-height: 1200px;
-    }
   }
 
   &__points {
