--- a/src/assets/styles/scss/components/home/_carousel.scss
+++ b/src/assets/styles/scss/components/home/_carousel.scss
@@ -36,39 +36,17 @@
     justify-content: space-between;
     align-items: center;
     transition: all 1s ease-in-out;
-  }
+    max-height: 90vh;
 
-  &__points {
-    width: 100vw;
-    margin: 1em 0 0;
-    padding: .4em;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
+    &--image {
+      width: 100vw;
+      height: 100%;
+      opacity: 0;
+      transition: 1s;
+      object-fit: contain;
 
-    &--point {
-      width: 2em;
-      height: 2em;
-      margin: 1em 1em 0;
-      cursor: pointer;
-
-      &.activo {
-        background-color: var.$bianchi-color;
-      }
-    }
-  }
-
-  &__text {
-
-    &--title {
-
-      &-1,
-      &-2,
-      &-3 {
-        text-align: center;
-        font-size: 4vw;
-        color: white;
+      &.loaded {
+        opacity: 1;
       }
     }
   }
