add error page and type components

--- a/src/assets/styles/scss/components/category/_product.scss
+++ b/src/assets/styles/scss/components/category/_product.scss
@@ -1,4 +1,6 @@
 @use '../../abstracts/variables' as var;
+@use './productBox';
+@use './cartHandler';
 
 .products {
   display: grid;
@@ -10,192 +12,6 @@
     text-align: center;
     font-weight: 800;
     font-size: 1.2em;
-  
-
-
-    &--image {
-      width: 17vw;
-      margin-bottom: 10px;
-      opacity: 0;
-      transition: all 3s;
-
-      &.loaded {
-        opacity: 1;
-      }
-
-      &.selected {
-        box-shadow: 0 0 5px 1px var.$bianchi-color;
-        border-radius: 10px;
-      }
-
-      &.empty {
-        opacity: .2;
-      }
-
-      @media screen and (max-width: 1750px) {
-        width: 19vw;
-      }
-
-      @media screen and (max-width: 1550px) {
-        width: 21vw;
-      }
-
-      @media screen and (max-width: 1350px) {
-        width: 23vw;
-      }
-
-      @media screen and (max-width: 1150px) {
-        width: 25vw;
-      }
-
-      @media screen and (max-width: 1050px) {
-        width: 30vw;
-      }
-
-      @media screen and (max-width: 950px) {
-        width: 33vw;
-      }
-
-      @media screen and (max-width: 850px) {
-        width: 36vw;
-      }
-
-      @media screen and (max-width: 770px) {
-        width: 70vw;
-      }
-
-      @media screen and (max-width: 500px) {
-        width: 80vw;
-      }
-    }
-
-    &--name {
-      margin-bottom: 12px;
-    }
-
-    &--price-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      &-price {
-        letter-spacing: .2px;
-        color: var.$bianchi-color;
-
-        &.offer-price {
-          font-size: 1.2em;
-          margin-left: 20px;
-        }
-
-        &.erased {
-          text-decoration: line-through;
-          font-size: .8em;
-        }
-      }
-    }
-
-    &--options {
-
-      &-btn {
-        width: 100%;
-        margin: 20px auto;
-        margin-right: 10px;
-        display: flex;
-        justify-content: center;
-
-        div {
-          display: flex;
-          padding-left: 50px;
-          margin-right: 20px;
-
-          p {
-            margin: 12px 10px 0 10px;
-
-            &.empty {
-              opacity: .2;
-            }
-          }
-
-
-          svg {
-            color: white;
-            background: linear-gradient(to right, #00a59f 50%, var.$bianchi-color 50%);
-            transition: all .4s ease-out;
-
-            &.cart {
-              font-size: 1.2em;
-              width: 50%;
-              border-radius: 6px;
-              margin: 0 auto;
-              cursor: pointer;
-              margin: 5px 10px;
-              padding: 7px 10px;
-              background-size: 200% 100%;
-              background-position: right bottom;
-              opacity: 1;
-
-
-              &:hover {
-                background-position: left bottom;
-              }
-            }
-
-            &.empty {
-              cursor: inherit;
-              pointer-events: none;
-              opacity: .2;
-            }
-
-            @media screen and (max-width: 2130px) {
-              width: 70%;
-            }
-
-            @media screen and (max-width: 1850px) {
-              font-size: .8em;
-            }
-
-            @media screen and (max-width: 1390px) {
-              width: 75%;
-            }
-
-            @media screen and (max-width: 1160px) {
-              width: 78%;
-            }
-
-            @media screen and (max-width: 1050px) {
-              width: 62%;
-            }
-
-            @media screen and (max-width: 770px) {
-              width: 50%;
-            }
-
-            @media screen and (max-width: 470px) {
-              width: 60%;
-
-            }
-
-            @media screen and (max-width: 350px) {
-              width: 75%;
-              padding: 10px 15px;
-            }
-          }
-        }
-      }
-
-      svg {
-        width: 7%;
-        opacity: .4;
-        transition: all .4s ease-in-out;
-        cursor: pointer;
-        float: right;
-        font-size: 2.5em;
-
-        &:hover {
-          opacity: .9;
-        }
-      }
-    }
 
     @media screen and (max-width: 1050px) {
       margin: 15px 5px;
