--- a/src/assets/styles/scss/components/header/_navbar.scss
+++ b/src/assets/styles/scss/components/header/_navbar.scss
@@ -7,11 +7,16 @@
   justify-content: space-between;
   padding: 10px 0;
   margin-bottom: 0;
+  position: relative;
+  z-index: 999999;
 
   &__container-logo {
     width: 20%;
-    cursor: pointer;
     margin: 0 50px;
+
+    img {
+      cursor: pointer;
+    }
 
     @media screen and (max-width: 770px) {
       margin: auto 20px;
@@ -112,6 +117,7 @@
       font-size: 1.8em;
       width: 3%;
       min-width: 50px;
+      cursor: pointer;
 
       svg {
         cursor: pointer;
@@ -181,6 +187,7 @@
       display: flex;
       flex-flow: row nowrap;
     }
+
     @media screen and (max-width: 420px) {
       margin-right: 10px;
     }
