--- a/src/assets/styles/scss/components/header/_navbar.scss
+++ b/src/assets/styles/scss/components/header/_navbar.scss
@@ -77,7 +77,7 @@
     }
 
     &--user {
-      font-size: 1.4em;
+      font-size: 1.5em;
       width: 3%;
       min-width: 50px;
 
@@ -114,7 +114,7 @@
     margin-right: 20px;
 
     &--cart {
-      font-size: 1.8em;
+      font-size: 1.5em;
       width: 3%;
       min-width: 50px;
       cursor: pointer;
@@ -124,7 +124,7 @@
       }
 
       span.active {
-        background-color: red;
+        background-color: #00b7b1d8;
         border-radius: 50%;
         font-size: .45em;
         min-width: 18px;
@@ -134,7 +134,8 @@
         right: 20px;
         color: white;
         font-weight: 100;
-        padding: 4px;
+        padding: 2px;
+        border: .1px solid #039e99;
 
         @media screen and (max-width: 770px) {
           right: 115px;
